<resources>
    <string name="app_name" translatable="false">Easy Menu Planner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_automatic_fill">Automatic fill</string>
    <string name="action_clear_all">Clear planning</string>
    <string name="action_settings">Settings</string>

    <string name="title_section_week">Week menu</string>
    <string name="title_section_course">Courses</string>
    <string name="title_section_shopping_list">Week shopping list</string>
    <string name="error_loadingInitialConfig">Problem loading initial configuration</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="dialog_delete_confirmation">Delete selected courses?</string>
    <string name="dialog_new_course_title">New course</string>
    <string name="dialog_new_course_message">Name of the new course</string>
    <string name="cab_title">Select Items</string>
    <plurals name="cab_elements_selected">
        <item quantity="one">%d item selected.</item>
        <item quantity="other">%d items selected.</item>
    </plurals>
    <string name="first_course">Lunch: \nMain Dish</string>
    <string name="second_course">Lunch: \nSide Dish</string>
    <string name="action_edit">Edit</string>
    <string name="dialog_edit_course_title">Edit course</string>
    <string name="empty_name_not_allowed">Name can\'t be empty</string>
    <string name="days_with_this_course_exist">This course (%s) is assigned to one or more days</string>
    <string name="delete_it_anyway">Delete anyway</string>
    <string name="first_courses_needed">You need to add some more first courses.</string>
    <string name="not_enough_courses">Not enough courses exist!</string>
    <string name="second_course_needed">You need to add some more second courses.</string>
    <string name="breakfast_needed">You need to add some more breakfasts.</string>
    <string name="dinner_needed">You need to add some more dinner courses.</string>
    <string name="dinner_second_needed">You need to add some more dinner second courses.</string>
    <string name="go_to_courses">Go to Courses</string>
    <string name="action_restore_default_courses">Restore default courses</string>
    <string name="second_both">Both</string>
    <string name="action_hide_completed">Hide completed items</string>
    <string name="action_show_completed">Show all items</string>
    <string name="select_course">Select course</string>
    <string name="ingredients">Ingredients</string>
    <string name="day_course_add">add…</string>
    <string name="day_course_change">Change…</string>
    <string name="day_course_remove">Remove</string>
    <string name="course_already_exists">This course already exists</string>
    <string name="week_widget_label_small">Easy Menu Planner - Week planning (3x1)</string>
    <string name="week_widget_label_med">Easy Menu Planner - Week planning (3x2)</string>
    <string name="shopping_list_widget_label">Easy Menu Planner - Shopping list</string>
    <string name="android_3_required">Android 3.0 is required at least for this widget to work</string>
    <string name="bought">Bougth</string>
    <string name="not_bought">Not bought</string>
    <string name="shopping_list_empty">Your shopping list is empty</string>
    <string name="shoppinglist_ingredient_on_days">on</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="assigned_to">"Assigned to: "</string>
    <string name="help">Help</string>
    <string name="name_label">Name:</string>
    <string name="ingredients_label">Ingredients:</string>
    <plurals name="intredients_missing">
        <item quantity="one">%1$d ingredient is missing: %2$s</item>
        <item quantity="other">%1$d ingredients are missing: %2$s</item>
    </plurals>
    <string name="hello_world">Hello world!</string>
    <string name="finish_tutorial">Skip the tutorial</string>
    <string name="go_to_the_app">Go to the app</string>
    <string name="dinner">Dinner: \nMain Dish</string>
    <string name="dinner_second">Dinner: \nSide Dish</string>
    <string name="include_dinner">Include dinner</string>
    <string name="dinner_dishes_will_be_lost">The courses you had set for dinner will be lost</string>
    <string name="lunch_dishes_will_be_lost">The courses you had set for lunch will be lost</string>
    <string name="include_breakfast">Include breakfast</string>
    <string name="include_lunch">Include lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="breakfast_dishes_will_be_lost">The courses you had set for breakfast will be lost</string>
    <string name="title_activity_settings">Options</string>
    <string name="settings_week_menu_header">WEEK MENU SETTINGS</string>
    <string name="settings_week_start">Start week planning from:</string>
    <string name="confirm_clear_planning">Clear the planning?</string>
    <string name="show_at_start">Show tutorial on startup</string>
</resources>
