<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name_label"
        android:id="@+id/name_label"
        android:elegantTextHeight="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_edit_text"
        android:hint="@string/dialog_new_course_message"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ingredients_label"
        android:id="@+id/ingredient_label"/>

    <com.oscardelgado83.easymenuplanner.ui.IngredientsCompletionView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients_edit_text"
        android:hint="@string/ingredients"
        android:textColor="@android:color/black"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_course"
            android:id="@+id/course_option_first"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_course"
            android:id="@+id/course_option_second"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:id="@+id/course_option_breakfast"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner"
            android:id="@+id/course_option_dinner"/>
</LinearLayout>